# FEUP-AEDA

./: README.md  ppt_padaria_parte_2_final.pptx
Bonus - CLion Project with Unit Tests/: CMakeLists.txt  README.md  main.cpp
Bonus - CLion Project with Unit Tests/Tests/: Padaria Bakery.cpp  bakery.cpp  bakery.h  client.h  date.h  employee.h  menu.cpp  menu.h  tests.cpp
Bonus - CLion Project with Unit Tests/docs/: Doxyfile
Bonus - CLion Project with Unit Tests/docs/html/: AuxFunctions_8h.html  AuxFunctions_8h_source.html  annotated.html  bakery_8cpp.html  bakery_8h.html  bakery_8h_source.html  classAlreadyExistingBakery-members.html  classAlreadyExistingBakery.html  classAlreadyExistingClient-members.html  classAlreadyExistingClient.html  classAlreadyExistingEmployee-members.html  classAlreadyExistingEmployee.html  classAlreadyExistingProduct-members.html  classAlreadyExistingProduct.html  classBakery-members.html  classBakery.html  classBakeryClosed-members.html  classBeverage-members.html  classBeverage.html  classBread-members.html  classBread.html  classCake-members.html  classCake.html  classCakeLayerDoesntExist-members.html  classCakeLayerDoesntExist.html  classClient-members.html  classClient.html  classCompany-members.html  classCompany.html  classDate-members.html  classEmployee-members.html  classEmployee.html  classInvalidTime-members.html  classNonExistingBakery-members.html  classNonExistingBakery.html  classNonExistingBeverage-members.html  classNonExistingBread-members.html  classNonExistingClient.html  classNonExistingEmployee-members.html  (+63 more)
(+286 files in other folders)
